[tool.poetry]
name = "lab"
version = "0.1.0"
description = ""
authors = ["rtrentin <rtrentin@cisco.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyvim = "^3.0.2"
pyvmomi = "^7.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
